fixes view-height of header on mobile

--- a/sass/customstyles.scss
+++ b/sass/customstyles.scss
@@ -46,6 +46,7 @@ body {
 		padding: 0 0 0 5%;
 		margin: 175px auto;
 		width: 100%;
+		min-height: 100vh;
 		.my_h1 {
 			font-size: .8em;
 			margin: 20px 0;
@@ -58,6 +59,7 @@ body {
 		padding: 0 0 0 0%;
 		margin: 175px auto;
 		width: 80%;
+		min-height: 100vh;
 		.my_h1 {
 			font-size: .9em;
 			margin: 20px 0;
